Added picture tag and used srcset with img tag in images html
srcset with img tag - is for serving differently-sized versions of the same image && picture tag is useful when  to change more than just the resolution of the loaded image to fit the user’s situation, the browser must respect the rule set by user

--- a/image.html
+++ b/image.html
@@ -5,22 +5,40 @@
       img {
         background-color: rgb(234, 185, 185);
       }
-      div {
-        display: flex;
-        flex-wrap: wrap-reverse;
-
-        justify-content: center;
-      }
     </style>
     <title>Images in HTML</title>
   </head>
   <body>
     <div>
+      <h1>Img Tag</h1>
+      <br />
       <img
         src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_light_color_272x92dp.png"
         alt="Google Logo"
         width="400"
         height="100"
+      /><br />
+      <h1>Picture Tag</h1>
+      <picture>
+        <source
+          media="(min-width:1280px)"
+          srcset="https://placehold.co/1280x200"
+        />
+        <source
+          media="(min-width:750px)"
+          srcset="https://placehold.co/750x100"
+        />
+        <img src="https://placehold.co/200x100" alt="Flowers" />
+      </picture>
+      <br />
+      <h1>Image src-set</h1>
+      <img
+        srcset="
+          https://placehold.co/200x410 2x,
+          https://placehold.co/410x410 4x
+        "
+        sizes="70vmin"
+        src="https://placehold.co/150x150"
       />
     </div>
   </body>
